Family alignment fix

--- a/main.css
+++ b/main.css
@@ -23,7 +23,7 @@ section{
 .family{
   position: relative;
   border: 10px double #E2D8AC;
-  margin: 0.5em 3em;
+  margin: 0.5em 4.75em;
 }
 .indexhead{
   line-height: 60px;
